--- a/wordle.html
+++ b/wordle.html
@@ -2,14 +2,13 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://pietroppeter.github.io/wordle-it/">
+        <meta http-equiv="refresh" content="0; url=https://wordleaz.synetrix.in/">
         <script type="text/javascript">
-            window.location.href = "https://pietroppeter.github.io/wordle-it/"
+            window.location.href = "https://wordleaz.synetrix.in/"
         </script>
-        <title>Par🇮🇹le - reindirizzamento</title>
+        <title>WordleAZ - Yönləndiririk</title>
     </head>
     <body>
-        Se non sei stato reindirizzato automaticamente, segui questo <a href='https://pietroppeter.github.io/wordle-it/'>link per Par🇮🇹le</a>.
+        Əgər siz avtomatik olaraq yönləndirilmədinizsə, sadəcə bunu tıklayın <a href='https://wordleaz.synetrix.in/'>Link WordleAZ</a>.
     </body>
 </html>
-<!--https://stackoverflow.com/a/5411601-->
