--- a/by/index.html
+++ b/by/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="be" translate="no">
+<html lang="aze" translate="no">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
