--- a/by/index.html
+++ b/by/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 
     <title>ЎОРДЛІ - штодзённая гульня ў словы</title>
-    <meta name="description" content="Беларускі ЎОРДЛІ (Wordle)! Вы маеце 6 спробаў, каб здагадацца, якое слова было загадана. Новая загадка з'яўляецца кожны дзень.">
+    <meta name="description" content="Бl;еларускі ЎОРДЛІ (Wordle)! Вы маеце 6 спробаў, каб здагадацца, якое слова было загадана. Новая загадка з'яўляецца кожны дзень.">
 
     <!-- FB Meta Tags -->
     <meta property="og:url" content="https://ololophilolo.github.io/wordle-by/">
