--- a/byw/index.html
+++ b/byw/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="aze" translate="no">
+<html lang="aze" translate="yes">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
