--- a/byw/index.html
+++ b/byw/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 
-    <title>ЎОРДЛІ - штодзённая гульня ў словы</title>
-    <meta name="description" content="Бl;еларускі ЎОРДЛІ (Wordle)! Вы маеце 6 спробаў, каб здагадацца, якое слова было загадана. Новая загадка з'яўляецца кожны дзень.">
+    <title>Wordle Azərbaycan dilində</title>
+    <meta name="description" content="Wordle Azərbaycan dilində - 6 cəhddə gizli sözü tapın. Hər gün yeni bir söz!">
 
     <!-- FB Meta Tags -->
-    <meta property="og:url" content="https://ololophilolo.github.io/wordle-by/">
+    <meta property="og:url" content="https://wordleaz.synetrix.in/wordle.html">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="ЎОРДЛІ - штодзённая гульня ў словы">
-    <meta property="og:description" content="Беларускі ЎОРДЛІ (Wordle)! Вы маеце 6 спробаў, каб здагадацца, якое слова было загадана. Новая загадка з'яўляецца кожны дзень.">
-    <meta property="og:image" content="images/wordle_og.png">
+    <meta property="og:title" content="Wordle Azərbaycan dilində - Gündəlik Söz Oyunu>
+    <meta property="og:description" content="Wordle Azərbaycan dilində - 6 cəhddə gizli sözü tapın. Hər gün yeni bir söz!">
+    <meta property="og:image" content="images/wordleaz_1200x630.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -20,8 +20,8 @@
 
     <meta name="theme-color" content="#6aaa64" />
     <link rel="manifest" href="manifest.json" />
-    <link href="images/wordle_logo_32.png" rel="icon shortcut" sizes="3232" />
-    <link href="images/wordle_logo_192.png" rel="apple-touch-icon" />
+    <link href="images/wordleaz_logo_32x32.png" rel="icon shortcut" sizes="3232" />
+    <link href="images/wordleaz_logo_192x192.png" rel="apple-touch-icon" />
 
     <style>
       /* Global Styles & Colors */
