--- a/index.html
+++ b/index.html
@@ -117,6 +117,15 @@
         overflow-y: hidden;
       }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2B65CDBVB2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-2B65CDBVB2');
+    </script>
   </head>
   <body>
     <script src="main.js"></script>
