--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:image" content="images/wordle_og.png" />
+	<meta name="twitter:image" content="images/wordleaz_1200x630.png" />
 
     <meta name="theme-color" content="#6aaa64" />
     <link rel="manifest" href="manifest.json" />
