--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 
-    <title>Wordle Azərbaycan dilində</title>
+    <title>Wordle🇦🇿 Azərbaycan dilində</title>
     <meta name="description" content="Wordle Azərbaycan dilində - 6 cəhddə gizli sözü tapın. Hər gün yeni bir söz!">
 
     <!-- FB Meta Tags -->
