--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Wordle Azərbaycan dilində - 6 cəhddə gizli sözü tapın. Hər gün yeni bir söz!">
 
     <!-- FB Meta Tags -->
-    <meta property="og:url" content="https://wordleaz.synetrix.in/wordle.html">
+    <meta property="og:url" content="https://wordleaz.synetrix.in/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Wordle Azərbaycan dilində - Gündəlik Söz Oyunu>
     <meta property="og:description" content="Wordle Azərbaycan dilində - 6 cəhddə gizli sözü tapın. Hər gün yeni bir söz!">
