--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 
     <title>Wordle🇦🇿 Azərbaycan dilində</title>
-    <meta name="description" content="Wordle Azərbaycan dilində - 6 cəhddə gizli sözü tapın. Hər gün yeni bir söz!">
+    <meta name="description" content="Wordle Azərbaycan dilində - 6 cəhddə gizli sözü tapın. Hər gün yeni bir söz!"/>
 
     <!-- FB Meta Tags -->
-    <meta property="og:url" content="https://wordleaz.synetrix.in/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Wordle Azərbaycan dilində - Gündəlik Söz Oyunu>
-    <meta property="og:description" content="Wordle Azərbaycan dilində - 6 cəhddə gizli sözü tapın. Hər gün yeni bir söz!">
-    <meta property="og:image" content="images/wordleaz_1200x630.png">
+    <meta property="og:url" content="https://wordleaz.synetrix.in/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Wordle Azərbaycan dilində - Gündəlik Söz Oyunu" />
+    <meta property="og:description" content="Wordle Azərbaycan dilində - 6 cəhddə gizli sözü tapın. Hər gün yeni bir söz!" />
+    <meta property="og:image" content="images/wordleaz_1200x630.png" />
 
     <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:image" content="images/wordleaz_1200x630.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+	  <meta name="twitter:image" content="images/wordleaz_1200x630.png" />
 
     <meta name="theme-color" content="#6aaa64" />
     <link rel="manifest" href="manifest.json" />
